fix layout spacing issues

--- a/src/app/recipes/recipes.component.css
+++ b/src/app/recipes/recipes.component.css
@@ -1,3 +1,17 @@
 .recipe-detail{
   text-align: center;
+  padding-top: 30px;
+
+}
+
+.main-container{
+  padding: 50px 0;
+}
+
+@media(min-width: 768px){
+  .recipe-detail{
+    padding-left: 30px;
+    padding-top: 0;
+  }
+
 }
